2012-03-16  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/generic/ldconfig.h (FLAG_X8664_LIBX32): New macro.
	* elf/cache.c (print_entry): Handle FLAG_X8664_LIBX32.

	* sysdeps/unix/sysv/linux/i386/readelflib.c (process_elf_file):
	Move e_machine check before EI_CLASS check.  Handle x32
	libraries.  Check EM_IA_64 only if SKIP_EM_IA_64 isn't defined.
	* sysdeps/unix/sysv/linux/x86_64/readelflib.c: Just define
	SKIP_EM_IA_64 and include
	<sysdeps/unix/sysv/linux/i386/readelflib.c>.

	* sysdeps/unix/sysv/linux/x86_64/dl-cache.h:
	Don't include <sysdeps/unix/sysv/linux/sparc/dl-cache.h>.
	(add_system_dir): New macro.

	* sysdeps/unix/sysv/linux/x86_64/ldconfig.h
	(SYSDEP_KNOWN_INTERPRETER_NAMES): Add /libx32/ld-linux-x32.so.2.

2012-03-16  Joseph Myers  <joseph@codesourcery.com>

	[BZ #2551]
	[BZ #2552]
	[BZ #2553]
	[BZ #2554]
	[BZ #2562]
	[BZ #2563]
	[BZ #2565]
	[BZ #2566]
	[BZ #2576]
	* math/w_j0.c (j0): Don't produce TLOSS errors for POSIX libm.
	(y0): Likewise.
	* math/w_j0f.c (j0f): Likewise.
	(y0f): Likewise.
	* math/w_j0l.c (__j0l): Likewise.
	(__y0l): Likewise.
	* math/w_j1.c (j1): Likewise.
	(y1): Likewise.
	* math/w_j1f.c (j1f): Likewise.
	(y1f): Likewise.
	* math/w_j1l.c (__j1l): Likewise.
	(__y1l): Likewise.
	* math/w_jn.c (jn): Likewise.
	(yn): Likewise.
	* math/w_jnf.c (jnf): Likewise.
	(ynf): Likewise.
	* math/w_jnl.c (__jnl): Likewise.
	(__ynl): Likewise.
	* math/libm-test.inc (j0_test): Add more tests.
	(j1_test): Likewise.
	(jn_test): Likewise.  Add trailing semicolon to existing test.
	(y0_test): Likewise.
	(y1_test): Likewise.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

	[BZ #13851]
	[BZ #13854]
	* sysdeps/ieee754/dbl-64/s_tan.c (tan): Use
	libc_feholdexcept_setround_53bit and libc_feupdateenv_53bit.
	* sysdeps/ieee754/ldbl-96/k_tanl.c: New file.
	* sysdeps/ieee754/ldbl-96/s_tanl.c: Include <errno.h>.
	(__tanl): Set errno for infinite argument.
	* sysdeps/i386/fpu/mptan.c: Remove.