@@ -1,5 +1,12 @@
 2012-03-16  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* sysdeps/unix/sysv/linux/x86_64/makecontext.c (__makecontext):
+	Use greg_t on sp.  Use unsigned int on idx_uc_link.  Cast
+	adresses to uintptr_t.  Replace "long int" and "unsigned long
+	int" with "greg_t" on va_arg.
+
+2012-03-16  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* sysdeps/generic/ldconfig.h (FLAG_X8664_LIBX32): New macro.
 	* elf/cache.c (print_entry): Handle FLAG_X8664_LIBX32.
 
